<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="text_bmi">BMI</string>
    <string name="text_hint_weight">70</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_hint_Height">180</string>
    <string name="text_measure_height">cm</string>
    <string name="text_measure_weight">Kg</string>
    <string name="text_btn_calculate">Calculate</string>
    <string name="text_result">result</string>
</resources>