<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"

    android:background="@color/layout_background">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_bmi"
    android:padding="16dp"
    android:textSize="16sp"
    android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_weight"
            android:textColor="@color/white"
             android:padding="16dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="16dp">


           <EditText
               android:id="@+id/weightET"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColorHint="@color/text_hint"
               android:hint="@string/text_hint_weight"
               android:inputType="numberDecimal"
               android:textColor="@color/white"
               android:layout_marginStart="15dp"
               android:padding="16dp"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/text_measure_weight"
               android:textColor="@color/white"/>

       </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_height"
                android:textColor="@color/white"
                android:padding="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


                <EditText
                    android:id="@+id/heightET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_hint"
                    android:hint="@string/text_hint_Height"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:layout_marginStart="16dp"
                    android:padding="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_measure_height"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_size"
        android:background="@color/btn_background"
        android:text="@string/text_btn_calculate"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="@dimen/margin_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >


            <TextView
                android:id="@+id/resultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_result"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/classificationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_height"
                android:textColor="@color/normal_weight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/rangeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_height"
                android:textColor="@color/text_hint"
                android:paddingBottom="@dimen/medium_size"
                android:textSize="@dimen/medium_text"
                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>






</LinearLayout>